--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,12 @@
 
 name: Generate Snake
 
-# Controls when the action will run. This action runs every 6 hours.
+# Controls when the action will run. This action runs every 24 hours.
 
 on:
   schedule:
-      # every 6 hours
-    - cron: "0 */6 * * *"
+      # every 24 hours
+    - cron: "0 */24 * * *"
 
 # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
@@ -19,7 +19,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+    timeout-minutes: 5
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
 
@@ -49,7 +51,7 @@ jobs:
           branch: main
           force: true
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           # the output branch we mentioned above
           target_branch: output
